<resources>
<!--    GENERAL STRINGS-->
    <string name="no_name">NO NAME</string>
    <string name="no_title">NO TITLE</string>

<!--    LOGIN FRAGMENT-->
    <string name="app_name">FamilyMapClient</string> <string name="serverHostLabel">Server Host:</string>
    <string name="serverPortLabel">Server Port:</string>
    <string name="usernameLabel">Username:</string>
    <string name="passwordLabel">Password:</string>
    <string name="firstNameLabel">First Name</string>
    <string name="lastNameLabel">Last Name</string>
    <string name="emailLabel">Email</string>
    <string name="genderLabel">Gender</string>
    <string name="genderMaleLabel">Male</string>
    <string name="genderFemaleLabel">Female</string>
    <string name="loginButton">LOGIN</string>
    <string name="registerButton">REGISTER</string>
    <string name="welcome_text">Welcome %s %s!</string>

<!--    MAP FRAGMENT-->
    <string name="search_menu">Search</string>
    <string name="settings_menu">Settings</string>
    <string name="map_select_text">Click on a marker to see event details</string>
    <string name="event_selected_text">%1$s %2$s\n%3$s: %4$s, %5$s (%6$d)</string>

<!--    SETTINGS ACTIVITY-->
    <string name="settingsLifeStoryLabel">Life Story Lines</string>
    <string name="settingsLifeStoryDesc">SHOW LIFE STORY LINES</string>
    <string name="settingsFamilyTreeLabel">Family Tree Lines</string>
    <string name="settingsFamilyTreeDesc">SHOW FAMILY TREE LINES</string>
    <string name="settingsSpouseLabel">Spouse Lines</string>
    <string name="settingsSpouseDesc">SHOW SPOUSE LINES</string>
    <string name="settingsFatherLabel">Father\'s side</string>
    <string name="settingsFatherDesc">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="settingsMotherLabel">Mother\'s Side</string>
    <string name="settingsMotherDesc">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="settingsMaleLabel">Male Events</string>
    <string name="settingsFemaleLabel">Female Events</string>
    <string name="settingsGenderDesc">FILTER EVENTS BASED ON GENDER</string>
    <string name="settingsLogoutLabel">Logout</string>
    <string name="settingsLogoutDesc">RETURN TO LOGIN SCREEN</string>

<!--    PERSON / EVENT ACTIVITIES-->
    <string name="lifeEventsTitle">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY</string>
    <string name="lifeEventsData">%s: %s, %s (%d)</string>
    <string name="personName">%s: %s</string>
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_activity_person">PersonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>