<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:importantForAutofill="noExcludeDescendants">

        <LinearLayout
            android:id="@+id/loginServerHostRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginServerHostLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/loginServerHostField"
                android:text="@string/serverHostLabel"/>

            <EditText
                android:id="@+id/loginServerHostField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginServerPortRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginServerPortLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/loginServerPortField"
                android:text="@string/serverPortLabel"/>

            <EditText
                android:id="@+id/loginServerPortField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginUserNameRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginUserNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/loginUsernameField"
                android:text="@string/usernameLabel"/>

            <EditText
                android:id="@+id/loginUsernameField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginPasswordRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/loginPasswordField"
                android:text="@string/passwordLabel"/>

            <EditText
                android:id="@+id/loginPasswordField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginFirstNameRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginFirstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/loginFirstNameField"
                android:text="@string/firstNameLabel"/>

            <EditText
                android:id="@+id/loginFirstNameField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginLastNameRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginLastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/loginLastNameField"
                android:text="@string/lastNameLabel"/>

            <EditText
                android:id="@+id/loginLastNameField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginEmailRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/loginEmailField"
                android:text="@string/emailLabel"/>

            <EditText
                android:id="@+id/loginEmailField"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginGenderRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:text="@string/genderLabel" />

            <RadioGroup
                android:id="@+id/loginGenderButtons"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/loginGenderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/genderMaleLabel" />

                <RadioButton
                    android:id="@+id/loginGenderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/genderFemaleLabel"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginButton"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerButton"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
